# InterflopSIMD

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
inc/: simd_interface.h
inc/libsimd/: avx.h  sse.h
src/: CMakeLists.txt  simd_interface.cpp
src/libsimd/: CMakeLists.txt  avx.cpp  sse.cpp
